pkgs/drbd9/drbd/.compat_test.6.1.26/have_generic_start_io_acct_q_rw_sect_part.stderr
<command-line>: warning: "KBUILD_MODNAME" redefined
<command-line>: note: this is the location of the previous definition
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/have_generic_start_io_acct_q_rw_sect_part.c: In function ‘foo’:
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/have_generic_start_io_acct_q_rw_sect_part.c:6:9: error: implicit declaration of function ‘generic_start_io_acct’ [-Werror=implicit-function-declaration]
    6 |         generic_start_io_acct(q, WRITE, 0, (struct hd_struct *) NULL);
      |         ^~~~~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
